@@ -38,6 +38,7 @@ Bug_2540_Regression_Test
 #Bug_2610_Regression_Test: !ST !ACE_FOR_TAO
 Bug_2659_Regression_Test: !ST !VxWorks64 !VxWorks65
 Bug_2653_Regression_Test: !ST
+Bug_2772_Regression_Test: !ST !FIXED_BUGS_ONLY
 Bug_2815_Regression_Test
 Bug_2820_Regression_Test
 Bug_2980_Regression_Test: !STATIC !Win32 !VxWorks !WCHAR
