@@ -247,6 +247,13 @@ project(Bug_2653_Regression_Test) : acetest {
   }
 }
 
+project(Bug_2772_Regression_Test) : acetest {
+  exename = Bug_2772_Regression_Test
+  Source_Files {
+    Bug_2772_Regression_Test.cpp
+  }
+}
+
 project(Bug_2815_Regression_Test) : acetest {
   exename = Bug_2815_Regression_Test
   Source_Files {
